tests/type/errors/bad_early_bind.typedsol
3:15 error: Symbol not found
